chore: clean IDE and compiler warnings